--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 # VITE_API_BASE_URL=https://lolmanager.onrender.com/
 VITE_FRONTEND_BASE_URL=https://loltm.net
-VITE_API_BASE_URL=https://38.242.201.82
+VITE_API_BASE_URL=https://api.loltm.net
 VITE_REDUX_DEVTOOLS=false
